// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with a copybutton 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full TextInput--with-copy-button"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
    <div
      class="CopyButton TextInput__copy-button"
      data-test-id="cf-ui-copy-button"
      id="copyButton"
    >
      <span>
        <button
          class="CopyButton__button"
          type="button"
        >
          <span
            class="TabFocusTrap CopyButton__TabFocusTrap"
            tabindex="-1"
          >
            <span
              class="CopyButton__text"
            >
              Copy 
               to clipboard
            </span>
            <svg
              class="Icon Icon--small Icon--muted"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders the component with a placeholder text 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      placeholder="placeholder"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with a rows defined 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      rows="2"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with a textlink 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
    <button
      class="TextLink TextField__label-link TextLink--primary"
      data-test-id="cf-ui-text-link"
      type="button"
    >
      <span
        class="TabFocusTrap"
        tabindex="-1"
      >
        <div
          class="TextLink__icon-wrapper"
        >
          <svg
            class="Icon Icon--small Icon--primary TextLink__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
            />
          </svg>
        </div>
        Unlock to edit
      </span>
    </button>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with a value 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value="1234"
    />
  </div>
</div>
`;

exports[`renders the component with additional prop 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="test"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="TextField TextField--full my-extra-class"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with as textarea 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="Textarea Textarea--full"
  >
    <textarea
      aria-label="someComponent"
      class="Textarea__textarea"
      data-test-id="cf-ui-textarea"
      id="someComponent"
      name="someComponent"
    />
  </div>
</div>
`;

exports[`renders the component with characters count 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      maxlength="20"
      name="someComponent"
      value=""
    />
  </div>
  <div
    class="TextField__hints"
  >
    <p
      class="HelpText TextField__help-text TextField__count"
      data-test-id="cf-ui-help-text"
    >
      0
      /
      20
    </p>
  </div>
</div>
`;

exports[`renders the component with help text 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
  <div
    class="TextField__hints"
  >
    <p
      class="HelpText TextField__help-text"
      data-test-id="cf-ui-help-text"
    >
      You need to fill out this field
    </p>
  </div>
</div>
`;

exports[`renders the component with max length of characters 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      maxlength="10"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with required text 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with small width 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with validation message 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full TextInput--negative"
  >
    <input
      aria-label="someComponent"
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
  <div
    class="ValidationMessage TextField__validation-message"
    data-test-id="cf-ui-validation-message"
  >
    <svg
      class="Icon Icon--small Icon--negative ValidationMessage__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p
      class="ValidationMessage__text"
    >
      Field is required
    </p>
  </div>
</div>
`;

exports[`updates the value 1`] = `
<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      value="new value"
    />
  </div>
</div>
`;
